--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cloudinary": "^1.41.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "mongoose": "^8.16.2",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-geocoder": "^4.4.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
